Bug fixes including not allowing more than 1 decimal per number, many bugs pertaining to what other buttons display after clicking the equals button, and not allowing characters to overflow display.

--- a/style.css
+++ b/style.css
@@ -5,8 +5,29 @@ body {
 #main-container {
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
+}
+
+#page-title {
+    font-size: 40px;
+    margin-bottom: 20px;
+    font-family: monospace;
+    font-style: oblique;
+    font-weight: 500;
+}
+
+#page-subtitle {
+    margin-bottom: 80px;
+    font-family: monospace;
+    font-size: 20px;
+}
+
+#acknowledgement {
+    font-family: monospace;
+    font-size: 12px;
     margin-top: 50px;
 }
 
@@ -74,6 +95,7 @@ body {
 }
 .calc-button:hover {
     background-color: rgb(199, 199, 199);
+    margin-top: -5px;
 }
 
 #equal-btn {
@@ -82,4 +104,8 @@ body {
 
 .num-btn {
     background-color: rgb(221, 221, 221);
+}
+
+.num-btn:hover {
+    background-color: darkseagreen;
 }
